<resources>
    <string name="app_name">股票答题助手</string>
    <string name="splash_desc">每日一答　轻松备考</string>
    <string name="text_version">V1.0.0</string>
    <string name="privacy_exit">退出</string>
    <string name="privacy_agree">同意</string>
    <string name="privacy_tips">感谢您使用期货题库宝软件！为了保护您的隐私和使用安全，请您务必仔细阅读我们的《用户协议》和《隐私政策》。在确认充分理解并同意后再开始使用此应用。感谢！</string>
    <string name="users_note">用户须知</string>
    <string name="privacy_tips_key1">用户协议</string>
    <string name="privacy_tips_key2">隐私政策</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="welcome">"欢迎登录"</string>
    <string name="invalid_username">手机号格式不正确</string>
    <string name="invalid_password">密码不少于6位</string>
    <string name="login_failed">"登录失败，手机号或密码错误"</string>
    <string name="text_new_register">新用户注册</string>
    <string name="title_register">注册</string>
    <string name="text_login_register">登录/注册</string>
    <string name="logout_account">注销账号</string>
    <string name="text_suggest">意见反馈</string>
    <string name="text_about">关于我们</string>
    <string name="hint_advice">请输入您的意见或者建议</string>
    <string name="app_base_url">https://www.cuour.org</string>
    <string name="view_analysis">查看解析</string>
    <string name="answer_analysis">答案解析</string>
    <string name="unanswered">未作答</string>

</resources>
