<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MyFragment">

    <RelativeLayout
        android:id="@+id/rl_suggest"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/card_info"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_suggest"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/suggest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_suggest"
            android:text="@string/text_suggest"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_update"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_suggest"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_update"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="V1.0.0"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_update"
            android:text="版本更新"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_update"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_about"
            android:text="@string/text_about"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_logOut"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_about"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_logOut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_logOut"
            android:text="@string/logout_account"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/colorRed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/iv_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/head_portrait" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_head"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rl_logOut"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_login_register"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>